# cipherly

./: .gitignore  Dockerfile  README.md  cipherly.code-workspace
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: google.rs  kek.rs  main.rs
frontend/: .gitignore  .npmrc  .prettierrc  package-lock.json  package.json  plain.txt.cly  playwright.config.ts  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.js  tailwind.config.ts  vite.config.ts
frontend/e2e/: auth.test.ts  cipherly.test.ts  home.test.ts  utils.ts
frontend/src/: app.css  app.d.ts
frontend/src/lib/: cipherly.ts
frontend/src/lib/components/: AppBar.svelte  Avatar.svelte  Banner.svelte  Chip.svelte  CopyText.svelte  DarkModeToggle.svelte  EncryptionAlert.svelte  IconText.svelte  Input.svelte  Label.svelte  PrimaryNav.svelte  TextOrFileInput.svelte  TextOrFileOutput.svelte  Textarea.svelte  ValidationError.svelte  YouTubeVideoCard.svelte
frontend/src/lib/components/ui/alert/: alert-title.svelte  index.ts
frontend/src/lib/components/ui/app-bar/: index.ts
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/lib/components/ui/input/: input.svelte
frontend/src/lib/components/ui/label/: label.svelte
frontend/src/lib/components/ui/skeleton/: skeleton.svelte
frontend/src/lib/components/ui/tabs/: tabs-content.svelte  tabs-trigger.svelte
frontend/src/lib/components/ui/textarea/: textarea.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/decrypt/: +page.svelte  auth.svelte
frontend/src/routes/encrypt/: +page.svelte
