[package]
name = "cipherly"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Target built docker to speed up dependency compilation.
# See Dockerfile.
[lib]
name = "build_backend_dummy"
path = "build/dummy.rs"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["http2", "ws", "macros"] }
base64 = "0.22.1"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.20" }
rmp-serde = "1.3.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = {version = "1.45.1", features = ["full"]}
tokio-util = { version = "0.7.15", features = ["rt"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
    "fs",
    "trace",
    "timeout",
    "request-id",
    "cors",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }