[package]
name = "cipherly"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Target built docker to speed up dependency compilation.
# See Dockerfile.
[lib]
name = "build_backend_dummy"
path = "build/dummy.rs"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["http2", "macros"] }
base64 = "0.22.1"
chrono = "0.4.42"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.1" }
rmp-serde = "1.3.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["full"]}
tokio-util = { version = "0.7.17", features = ["rt"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = [
    "fs",
    "trace",
    "timeout",
    "request-id",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }


[dev-dependencies]
test-log = { version = "0.2.18", features = ["trace", "color"] }
